--- a/package.json
+++ b/package.json
@@ -1,34 +1,44 @@
 {
-  "name": "bearable-sol",
-  "version": "1.0.0",
-  "description": "Solidity SDK for enabling smart contract features to TwoBitBear holders",
-  "keywords": [
-    "solidity",
-    "TwoBitBears"
-  ],
-  "homepage": "https://github.com/dsmitchell/bearable-sol#readme",
-  "bugs": {
-    "url": "https://github.com/dsmitchell/bearable-sol/issues"
-  },
-  "license": "MIT",
-  "author": "DS Mitchell",
-  "files": [
-    "contracts/"
-  ],
-  "repository": "git+https://github.com/dsmitchell/bearable-sol.git",
-  "dependencies": {
-    "@openzeppelin/contracts": "^4.3.2",
-    "@theappstudio/solidity": "^0.9.3"
-  },
-  "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.0",
-    "chai": "^4.2.0",
-    "dotenv": "^10.0.0",
-    "ethereum-waffle": "^3.0.0",
-    "ethers": "^5.0.0",
-    "hardhat": "^2.6.8",
-    "hardhat-gas-reporter": "^1.0.4",
-    "solidity-coverage": "^0.7.16"
-  }
+	"name": "@dsmitchell/bearable",
+	"version": "1.0.0",
+	"description": "Solidity SDK for enabling smart contract features to TwoBitBear holders (a.k.a. Membears)",
+	"keywords": [
+		"solidity",
+		"TwoBitBears",
+		"TwoBitHoney",
+		"TwoBitCubs"
+	],
+	"homepage": "https://github.com/dsmitchell/bearable-sol#readme",
+	"bugs": {
+		"url": "https://github.com/dsmitchell/bearable-sol/issues"
+	},
+	"license": "MIT",
+	"author": "DS Mitchell",
+	"files": [
+		"contracts/"
+	],
+	"repository": "git+https://github.com/dsmitchell/bearable-sol.git",
+	"dependencies": {
+		"@openzeppelin/contracts": "^4.0",
+		"@theappstudio/solidity": "^0.9.7"
+	},
+	"devDependencies": {
+		"@nomiclabs/hardhat-ethers": "^2.0.0",
+		"@nomiclabs/hardhat-waffle": "^2.0.0",
+		"@typechain/ethers-v5": "^9.0.0",
+		"@typechain/hardhat": "^4.0.0",
+		"@types/chai": "^4.2.0",
+		"@types/mocha": "^9.1.0",
+		"@types/node": "^17.0.0",
+		"chai": "^4.3.0",
+		"dotenv": "^16.0.0",
+		"ethereum-waffle": "^3.0.0",
+		"ethers": "^5.5.0",
+		"hardhat": "^2.8.0",
+		"hardhat-gas-reporter": "^1.0.0",
+		"solidity-coverage": "^0.7.0",
+		"ts-node": "^10.1.0",
+		"typechain": "^7.0.0",
+		"typescript": "^4.5.0"
+	}
 }
